--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
         jcenter()
         maven {
             name = "forge"
-            url = "http://files.minecraftforge.net/maven"
+            url = "https://repo.essential.gg/repository/maven-public"
+            url = "https://files.minecraftforge.net/maven"
         }
     }
     dependencies {
@@ -14,14 +15,15 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+
+plugins {
+//    id "net.minecraftforge.gradle.forge" version "2.0.2"
+    id 'com.github.johnrengelman.shadow' version "6.0.0"
+}
+
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'kotlin'
-/*
-// for people who want stable - not yet functional for MC 1.8.8 - we require the forgegradle 2.1 snapshot
-plugins {
-    id "net.minecraftforge.gradle.forge" version "2.0.2"
-}
-*/
+
 version = "1.0"
 group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "modid"
